Epitaph not path smh

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Epipath"
+title: "Epitaph"
 remote_theme: pmarsceill/just-the-docs
 color_scheme: "dark"
 search_enabled: true
@@ -14,7 +14,7 @@ aux_links:
     - "//github.com/HaloBible/wiki/tree/gh-pages"
 
 # Footer content appears at the bottom of every page's main content
-footer_content: "Copyright &copy; 2019 Epipath. Distributed by an MIT license."
+footer_content: "Copyright &copy; 2019 Epitaph. Distributed by an MIT license."
 plugins:
   - jekyll-seo-tag
   - jekyll-mentions
