--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,6 @@ aux_links:
 
 # Footer content appears at the bottom of every page's main content
 footer_content: "Copyright &copy; 2019 Epitaph. Distributed by an MIT license."
-plugins:
-  - jekyll-seo-tag
+plugins: ["jekyll-seo-tag","jekyll-mentions","jekyll-youtube"]
   - jekyll-mentions
   - jekyll-youtube
