Change wording on links
This is to show users where they actually contribute.

--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ search_tokenizer_separator: /[\s/]+/
 # Enable or disable heading anchors
 heading_anchors: true
 aux_links:
-  "Github":
+  "Contribute Here":
     - "//github.com/HaloBible/wiki/tree/gh-pages"
 
 # Footer content appears at the bottom of every page's main content
-footer_content: "Copyright &copy; 2019 Epitaph. Distributed by an MIT license."
+footer_content: "Copyright &copy; 2019 Epitaph. Distributed by an MIT license. <a href="https://www.github.com/HaloBible/wiki/tree/gh-pages">Contribute here</a>."
 gems: [jekyll-youtube]
 plugins: 
     - jekyll-seo-tag
