Definitely broke something with last commit, reverting

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ aux_links:
     - "//github.com/HaloBible/wiki/tree/gh-pages"
 
 # Footer content appears at the bottom of every page's main content
-footer_content: "Copyright &copy; 2019 Epitaph. Distributed by an MIT license. <a href="https://www.github.com/HaloBible/wiki/tree/gh-pages">Contribute here</a>."
+footer_content: "Copyright &copy; 2019 Epitaph. Distributed by an MIT license."
 gems: [jekyll-youtube]
 plugins: 
     - jekyll-seo-tag
